--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-    <img src="drivedrop.png" alt ="drivedrop" class="image"/> 
+    <img src="clouddrop.png" alt ="drivedrop" class="image"/> 
         <div class="title">DriveDrop here!</div>
         <div class="auth-buttons">
             <button class="signin">Sign In</button>
