--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DriveDrop</title>
+    <title>CloudDrop</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
     <img src="clouddrop.png" alt ="drivedrop" class="image"/> 
-        <div class="title">DriveDrop here!</div>
+        <div class="title">CloudDrop here!</div>
         <div class="auth-buttons">
             <button class="signin">Sign In</button>
             <button class="signout">Sign Out</button>
