--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         </div>
     </div>
     <div class="actions">
-        <textarea placeholder="Enter text here ..."></textarea>
+        <grammarly-editor-plugin>
+            <textarea placeholder="Enter text here ..."></textarea>
+          </grammarly-editor-plugin>
         <button class="upload" onclick="upload()">Backup</button>
     </div>
 
@@ -36,7 +38,7 @@
             <li onclick="deleteFile(this)">Delete</li>
         </ul>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/@grammarly/editor-sdk?clientId=client_7dpKnWvQHfj9gCsxgn2Voi"></script>
     <script src="script.js"></script>
     <script async defer src="https://apis.google.com/js/api.js"></script>
     <script async defer src="https://accounts.google.com/gsi/client"></script>
